# Automacao-CAD

./: .env.example  .env.production  .gitignore  .vercelignore  AutoLSP_AutoConnect.lsp  AutoSetup_License_Connect.bat  CHANGELOG.md  DEPLOY_README.md  Dockerfile  README.md  SYSTEM_REPORT_2026-04-06.md  TODO.md  _audit.py  _check.py  _cors_test.py  _full_audit.py  _test_cam.py  ai_watchdog.py  alembic.ini  alembic.ini.new  backend_deploy_output.txt  build_agente.py  celery_app.py  celery_config.py  celery_tasks.py  check_user.py  circuit_breaker.py  dead_letter_queue.py  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  final_check.py  forge_link.spec  forge_link_agent.py  gpu_support.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  (+19 more)
.github/: copilot-instructions.md  dependabot.yml
AutoCAD_Cliente/: AUTO_APPLOAD.ps1  AUTO_SETUP.bat  DETECTAR_AUTOCAD.ps1  INICIAR_SINCRONIZADOR.bat  INSTALAR.bat  INSTALAR.ps1  INSTALAR_AGENTE.bat  INSTALAR_CMD.txt  INSTALAR_SILENCIOSO.bat  SINCRONIZADOR.ps1  acaddoc.lsp  agentaautocad.bat  agentaautocad_update.bat  install-agent.bat
agent/: __init__.py  bootstrap.py  cad_manager.py  install.bat  windows_service.py
ai_engines/: __init__.py  ai_guardrails.py  assistant_chatbot.py  base.py  chatcad_interpreter.py  chatcad_routes.py  conflict_detector.py  cost_estimator.py  document_generator.py  drawing_analyzer.py  llm_gateway.py  maintenance_predictor.py  pipe_optimizer.py  quality_inspector.py  router.py  routes.py
alembic/: README.md  env.py
api/: index.py
app/: __init__.py  (+3 more)
(+1651 files in other folders)
